syntax = "proto3";

package audit.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

import "pagination/v1/pagination.proto";

import "audit/service/v1/common.proto";
import "audit/service/v1/geo_location.proto";

// Operation Audit Log Service
service OperationAuditLogService {
  // Query operation audit log list
  rpc List (pagination.PagingRequest) returns (ListOperationAuditLogResponse) {}

  // Query operation audit log details
  rpc Get (GetOperationAuditLogRequest) returns (OperationAuditLog) {}

  // Create operation audit log
  rpc Create (CreateOperationAuditLogRequest) returns (google.protobuf.Empty) {}
}

// Operation Audit Log
message OperationAuditLog {
  // Action type
  enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;

    CREATE = 1;     // Create
    UPDATE = 2;     // Update
    DELETE = 3;     // Delete
    READ = 4;       // Read
    ASSIGN = 5;     // Assign
    UNASSIGN = 6;   // Unassign
    EXPORT = 8;     // Export

    OTHER = 7;      // Other
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "Operation audit log ID"}
  ]; // Operation audit log ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID"}
  ];  // Tenant ID

  optional string tenant_name = 3 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "Tenant name"}
  ]; // Tenant name

  optional uint32 user_id = 4 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "User ID"}
  ]; // User ID

  optional string username = 5 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {description: "Username"}
  ]; // Username


  optional string resource_type = 10 [
    json_name = "resourceType",
    (gnostic.openapi.v3.property) = {description: "Resource type"}
  ]; // Resource type

  optional string resource_id = 11 [
    json_name = "resourceId",
    (gnostic.openapi.v3.property) = {description: "Resource ID"}
  ]; // Resource ID

  optional ActionType action = 12 [
    json_name = "action",
    (gnostic.openapi.v3.property) = {description: "Action"}
  ]; // Action

  optional string before_data = 13 [
    json_name = "beforeData",
    (gnostic.openapi.v3.property) = {description: "Data before operation"}
  ]; // Data before operation

  optional string after_data = 14 [
    json_name = "afterData",
    (gnostic.openapi.v3.property) = {description: "Data after operation"}
  ]; // Data after operation

  optional SensitiveLevel sensitive_level = 15 [
    json_name = "sensitiveLevel",
    (gnostic.openapi.v3.property) = {description: "Sensitivity level"}
  ]; // Sensitivity level

  optional string request_id = 16 [
    json_name = "requestId",
    (gnostic.openapi.v3.property) = {description: "Global request ID (linked to gateway logs)"}
  ]; // Request ID

  optional string trace_id = 17 [
    json_name = "traceId",
    (gnostic.openapi.v3.property) = {description: "Global trace ID (W3C TraceContext compliant)"}
  ]; // Global trace ID

  optional bool success = 18 [
    json_name = "success",
    (gnostic.openapi.v3.property) = {description: "Whether the operation succeeded"}
  ]; // Operation result

  optional string failure_reason = 19 [
    json_name = "failureReason",
    (gnostic.openapi.v3.property) = {description: "Failure reason"}
  ]; // Failure reason

  optional string ip_address = 20 [
    json_name = "ipAddress",
    (gnostic.openapi.v3.property) = {description: "IP address"}
  ]; // IP address

  optional GeoLocation geo_location = 21 [
    json_name = "geoLocation",
    (gnostic.openapi.v3.property) = {description: "Geolocation (from IP database)"}
  ]; // Geolocation (from IP database)

  // ========== Compliance Verification ==========

  optional string log_hash = 40 [
    json_name = "logHash",
    (gnostic.openapi.v3.property).description = "Log content hash (SHA256, hexadecimal string)"
  ]; // Log hash

  optional bytes signature = 41 [
    json_name = "signature",
    (gnostic.openapi.v3.property).description = "Log digital signature (ECDSA, signed content: tenant_id+user_id+created_at+log_hash)"
  ]; // Log digital signature

  // ========== Time Fields ==========

  optional google.protobuf.Timestamp created_at = 50 [
    json_name = "createdAt",
    (gnostic.openapi.v3.property) = {description: "Log creation time"}
  ];// Log creation time
}

// Query operation audit log list - Response
message ListOperationAuditLogResponse {
  repeated OperationAuditLog items = 1;
  uint64 total = 2;
}

// Query operation audit log details - Request
message GetOperationAuditLogRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field filter for controlling returned fields"
    }
  ]; // View field filter for controlling returned fields
}

// Create operation audit log - Request
message CreateOperationAuditLogRequest {
  OperationAuditLog data = 1;
}
