syntax = "proto3";

package lcm.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Certificate Permission Service - manages certificate access grants between clients
service CertificatePermissionService {
  // Grant permission to another client to access a certificate
  rpc GrantPermission(GrantPermissionRequest) returns (GrantPermissionResponse) {
    option (google.api.http) = {
      post: "/v1/certificate-permissions"
      body: "*"
    };
  }

  // Revoke a previously granted permission
  rpc RevokePermission(RevokePermissionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/certificate-permissions/{certificate_id}/grantees/{grantee_client_id}"
    };
  }

  // List all permissions for a certificate (as owner)
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-permissions/{certificate_id}"
    };
  }

  // List all certificates accessible to the authenticated client (grants received)
  rpc ListAccessibleCertificates(ListAccessibleCertificatesRequest) returns (ListAccessibleCertificatesResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-permissions/accessible"
    };
  }

  // Check if the authenticated client has permission to access a certificate
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-permissions/{certificate_id}/check"
    };
  }
}

// Permission type enumeration
enum PermissionType {
  PERMISSION_TYPE_UNSPECIFIED = 0;
  PERMISSION_TYPE_READ = 1;      // View certificate metadata only
  PERMISSION_TYPE_DOWNLOAD = 2;  // Download certificate and private key
  PERMISSION_TYPE_FULL = 3;      // Full access including revoke
}

// CertificatePermission represents a permission grant
message CertificatePermission {
  uint32 id = 1 [json_name = "id"];
  string certificate_id = 2 [json_name = "certificateId"];
  uint32 grantee_client_id = 3 [json_name = "granteeClientId"];
  string grantee_client_name = 4 [json_name = "granteeClientName"];
  PermissionType permission_type = 5 [json_name = "permissionType"];
  string granted_by = 6 [json_name = "grantedBy"];
  optional google.protobuf.Timestamp expires_at = 7 [json_name = "expiresAt"];
  google.protobuf.Timestamp created_at = 200 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt"];
}

// Request to grant permission
message GrantPermissionRequest {
  // ID of the certificate to share
  string certificate_id = 1 [
    json_name = "certificateId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Client ID of the grantee (the client receiving access)
  string grantee_client_id = 2 [
    json_name = "granteeClientId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
    }
  ];

  // Type of permission to grant
  PermissionType permission_type = 3 [
    json_name = "permissionType",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).enum = {
      not_in: [0]
    }
  ];

  // Optional expiration time for the permission
  optional google.protobuf.Timestamp expires_at = 4 [json_name = "expiresAt"];
}

// Response after granting permission
message GrantPermissionResponse {
  CertificatePermission permission = 1 [json_name = "permission"];
}

// Request to revoke permission
message RevokePermissionRequest {
  // ID of the certificate
  string certificate_id = 1 [
    json_name = "certificateId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Client ID of the grantee whose permission is being revoked
  string grantee_client_id = 2 [
    json_name = "granteeClientId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
    }
  ];
}

// Request to list permissions for a certificate
message ListPermissionsRequest {
  // ID of the certificate (caller must be the owner)
  string certificate_id = 1 [
    json_name = "certificateId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}

// Response listing all permissions for a certificate
message ListPermissionsResponse {
  repeated CertificatePermission permissions = 1 [json_name = "permissions"];
  uint32 total = 2 [json_name = "total"];
}

// Request to list certificates accessible to the authenticated client
message ListAccessibleCertificatesRequest {
  // Filter by permission type
  optional PermissionType permission_type = 1 [json_name = "permissionType"];
  // Include expired permissions
  optional bool include_expired = 2 [json_name = "includeExpired"];
}

// Response listing accessible certificates
message ListAccessibleCertificatesResponse {
  repeated AccessibleCertificate certificates = 1 [json_name = "certificates"];
  uint32 total = 2 [json_name = "total"];
}

// Certificate accessible via permission grant
message AccessibleCertificate {
  string certificate_id = 1 [json_name = "certificateId"];
  string owner_client_id = 2 [json_name = "ownerClientId"];
  string common_name = 3 [json_name = "commonName"];
  repeated string dns_names = 4 [json_name = "dnsNames"];
  string issuer_name = 5 [json_name = "issuerName"];
  PermissionType permission_type = 6 [json_name = "permissionType"];
  string granted_by = 7 [json_name = "grantedBy"];
  optional google.protobuf.Timestamp expires_at = 8 [json_name = "expiresAt"];
  google.protobuf.Timestamp certificate_expires_at = 9 [json_name = "certificateExpiresAt"];
  google.protobuf.Timestamp granted_at = 10 [json_name = "grantedAt"];
}

// Request to check permission
message CheckPermissionRequest {
  // ID of the certificate to check
  string certificate_id = 1 [
    json_name = "certificateId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Required permission type
  PermissionType required_permission = 2 [
    json_name = "requiredPermission",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).enum = {
      not_in: [0]
    }
  ];
}

// Response for permission check
message CheckPermissionResponse {
  bool has_permission = 1 [json_name = "hasPermission"];
  // True if the caller owns the certificate (not via grant)
  bool is_owner = 2 [json_name = "isOwner"];
  // The actual permission level if granted (may be higher than required)
  optional PermissionType granted_permission = 3 [json_name = "grantedPermission"];
}
